--- a/E-EstateV2/src/app/rubber-sale/rubber-sales.component.html
+++ b/E-EstateV2/src/app/rubber-sale/rubber-sales.component.html
@@ -68,10 +68,10 @@
             </td>-->
             <td>
               <div style="display: flex;">
-                <button [disabled]="sale.paymentStatusId === 3 || sale.weightSlipNo !== null" class="btn-update" (click)="openDialog(sale)">
+                <button [disabled]="sale.paymentStatusId === 3" class="btn-update" (click)="openDialog(sale)">
                   <i class="fa fa-pencil"></i>
                 </button> &nbsp;
-                <button [disabled]="sale.paymentStatusId === 3 || sale.weightSlipNo !== null" class="btn-update" (click)="printForm1(sale)"  title="Print Form 1">
+                <button [disabled]="sale.paymentStatusId === 3" class="btn-update" (click)="printForm1(sale)"  title="Print Form 1">
                   <i class="fa fa-print"></i>
                 </button> &nbsp;
                 <!-- <button [disabled]="sale.paymentStatusId === 3 || sale.weightSlipNo !== null" class="btn-del" (click)="changeStatus(sale)">
