--- a/E-EstateV2/src/app/add-field/add-field.component.html
+++ b/E-EstateV2/src/app/add-field/add-field.component.html
@@ -19,7 +19,7 @@
                     <div style="columns: 2">
                         <label>Field Status <span style="color: red;">*</span> :</label>
                         <mat-select name="fieldStatus" placeholder="Please Choose" name="cropCat"
-                            [(ngModel)]="field.fieldStatusId">
+                            [(ngModel)]="field.fieldStatusId" (selectionChange)="checkStatus()">
                             <mat-option *ngFor="let category of filterCropCategories" [value]="category.id">
                                 {{ category.fieldStatus }}
                             </mat-option>
@@ -62,19 +62,19 @@
                         <b><input type="number" name="year" placeholder="yyyy" [(ngModel)]="field.yearPlanted"
                                 (change)="yearSelected()" /></b>
                         <label>Initial Tree Stand per Ha <span style="color: red;">*</span> :</label>
-                        <b><input type="number" name="treeStand" [(ngModel)]="field.initialTreeStand" /></b>
+                        <b><input type="number" name="treeStand" [(ngModel)]="field.initialTreeStand" (change)="checkTreeInitial()" /></b>
                     </div>
 
-                    <div style="columns: 2" *ngIf="field.isMature == true">
+                    <div style="columns: 2" *ngIf="field.isMature == true && !abandonedInput" >
                         <label>Current Tree Stand per Ha <span style="color: red;">*</span> :</label>
-                        <input name="currentTree" type="number" [(ngModel)]="field.currentTreeStand" />
+                        <input name="currentTree" type="number" [(ngModel)]="field.currentTreeStand" (change)="checkTreeCurrent()" />
 
                         <label>Date Open Tapping <span style="color: red;">*</span> :</label>
                         <input name="dateopentapping" type="month" [(ngModel)]="field.dateOpenTapping"
                             (change)="checkDOT()" />
                     </div>
 
-                    <div style="columns: 2" *ngIf="field.isMature == true">
+                    <div style="columns: 2" *ngIf="field.isMature == true && !abandonedInput"  >
                         <label>Total task <span style="color: red;">*</span> :</label>
                         <b><input type="number" name="totalTask" [(ngModel)]="field.totalTask" /></b>
                     </div>
