--- a/E-EstateV2/src/app/rubber-sale-detail/rubber-sale-detail.component.html
+++ b/E-EstateV2/src/app/rubber-sale-detail/rubber-sale-detail.component.html
@@ -5,19 +5,18 @@
     <label>Letter Of Consent No (Form 1) <span style="color: red;">*</span> :</label>
     <input type="text" name="letter" [(ngModel)]="rubberSale.letterOfConsentNo" disabled />
     <label>Date <span style="color: red;">*</span> :</label>
-    <input type="date" #date name="date" value="{{formattedDate}}" (change)="selectedDate(date.value)" />
+    <input type="date" #date name="date" value="{{formattedDate}}" (change)="selectedDate(date.value)" [disabled]="isComplete === 'yes'"  />
   </div>
 
   <div style="columns: 2">
     <label>Buyer <span style="color: red;">*</span> :</label>
-    <select name="buyer" [(ngModel)]="rubberSale.buyerId">
-      <option value="0" disabled selected>Please Choose</option>
-      <option *ngFor="let buyer of buyers" value="{{buyer.id}}">
-        {{buyer.buyerName}}
-      </option>
-    </select>
+    <mat-select *ngIf="buyers.length > 0" name="buyer" placeholder="Please Choose" [(ngModel)]="rubberSale.buyerId" [disabled]="isComplete === 'yes'" >
+      <mat-option *ngFor="let buyer of buyers" [value]="buyer.id">
+        {{buyer.renameBuyer}}
+      </mat-option>
+    </mat-select>
     <label>Rubber Type <span style="color: red;">*</span> :</label>
-    <mat-select name="rubberType" placeholder="Please Choose" [(ngModel)]="rubberSale.rubberType">
+    <mat-select name="rubberType" placeholder="Please Choose" [(ngModel)]="rubberSale.rubberType" [disabled]="isComplete === 'yes'" >
       <mat-option value="CUPLUMP">CUPLUMP </mat-option>
       <mat-option value="LATEX">LATEX </mat-option>
     </mat-select>
@@ -25,16 +24,17 @@
 
   <div style="columns: 2">
     <label>Wet Weight (Kg) <span style="color: red;">*</span> :</label>
-    <input type="number" name="weight" [(ngModel)]="rubberSale.wetWeight" (input)="calculateTotalPrice()" />
+    <input type="number" name="weight" [(ngModel)]="rubberSale.wetWeight" (input)="calculateTotalPrice()" [disabled]="isComplete === 'yes'"  />
     <label>Estimated DRC (%) <span style="color: red;">*</span> :</label>
-    <input type="number" name="DRC" [(ngModel)]="rubberSale.drc" (blur)="rubberSale.rubberType === 'CUPLUMP' ? validateCuplumpDRC($event) : validateLatexDRC($event)"  />
-  </div><br/>
+    <input type="number" name="DRC" [(ngModel)]="rubberSale.drc"
+      (blur)="rubberSale.rubberType === 'CUPLUMP' ? validateCuplumpDRC($event) : validateLatexDRC($event)" [disabled]="isComplete === 'yes'"  />
+  </div><br />
 
   <div [style.columns]="deliveryAgent === 'yes' ? '2' : '1'">
     <label>Delivery agent <span style="color: red;">*</span> : </label><br />
     <div class="radio-container">
       <label>
-        <input type="radio" name="choice" value="yes" [(ngModel)]="deliveryAgent" > Yes
+        <input type="radio" name="choice" value="yes" [(ngModel)]="deliveryAgent"> Yes
       </label>
       <label>
         <input type="radio" name="choice" value="no" [(ngModel)]="deliveryAgent"> No
@@ -43,21 +43,21 @@
 
     <div *ngIf="deliveryAgent == 'yes'">
       <label>Delivery agent name <span style="color: red;">*</span> :</label>
-      <input type="text" name="plateNo" [(ngModel)]="rubberSale.deliveryAgent" (change)="deliveryAgentRemark()"/>
+      <input type="text" name="plateNo" [(ngModel)]="rubberSale.deliveryAgent" (change)="deliveryAgentRemark()" [disabled]="isComplete === 'yes'"  />
     </div>
 
-  </div><br/>
+  </div><br />
 
   <div style="columns: 2">
     <label>Transport Plate No <span style="color: red;">*</span> :</label>
-    <input type="text" name="letter" [(ngModel)]="rubberSale.transportPlateNo" />
+    <input type="text" name="letter" [(ngModel)]="rubberSale.transportPlateNo" [disabled]="isComplete === 'yes'"  />
     <label>Driver Name <span style="color: red;">*</span> :</label>
-    <input type="text" name="driverName" [(ngModel)]="rubberSale.driverName" />
+    <input type="text" name="driverName" [(ngModel)]="rubberSale.driverName" [disabled]="isComplete === 'yes'"  />
   </div>
 
   <div style="columns: 2">
     <label>Driver Ic Number <span style="color: red;">*</span> :</label>
-    <input type="text" name="driverName" [(ngModel)]="rubberSale.driverIc" />
+    <input type="text" name="driverName" [(ngModel)]="rubberSale.driverIc" [disabled]="isComplete === 'yes'"  />
   </div>
 
   <!-- <div style="columns: 2">
@@ -69,22 +69,61 @@
   </div> -->
 
   <div>
-    <label>Remark :</label><br/>
+    <label>Remark :</label><br />
     <!-- <span style="color: red; font-size: 11px;">**Please indicate the delivery agent if necessary</span> -->
-    <textarea name="remark" [(ngModel)]="rubberSale.remark"></textarea>
+    <textarea name="remark" [(ngModel)]="rubberSale.remark" [disabled]="isComplete === 'yes'" ></textarea>
   </div>
 
-  <div style="margin-top: 10px">
-    <button style="float: right" class="btn-update" (click)="update()">
-      Update &nbsp; <i class="fa fa-pencil"></i>
-    </button>
+  <div>
+    <div class="radio-container">
+      <label>
+        <input type="radio" name="complete" value="yes" [(ngModel)]="isComplete"> Rubber Sale Completed
+      </label>
+    </div>
+    <hr>
+    <div *ngIf="isComplete == 'yes'">
+      <div style="columns: 2" class="column">
+        <label>Weight Slip Number<span style="color: red;">*</span> :</label>
+        <input type="text" name="weightSlipNo" [(ngModel)]="rubberSale.weightSlipNo" />
+        <label>Weight Slip Number Date <span style="color: red;">*</span> :</label>
+        <input type="date" #dateWeight name="weightSlipDate" value="{{todayDateWeight}}" (input)="selectedDateWightSlip(dateWeight.value)" />
+      </div>
+
+      <div style="columns: 2">
+        <label>Buyer Wet Weight (Kg) <span style="color: red;">*</span> :</label>
+        <input type="number" name="buyerWeight" [(ngModel)]="rubberSale.buyerWetWeight"
+          (change)="checkBuyerWeight()" />
+        <label>Buyer DRC (%) <span style="color: red;">*</span> :</label>
+        <input type="number" name="buyerDRC" [(ngModel)]="rubberSale.buyerDRC" 
+        (blur)="rubberSale.rubberType === 'CUPLUMP' ? validateCuplumpDRC($event) : validateLatexDRC($event)" />
+      </div>
+
+      <div style="columns: 2" class="column">
+        <label>Receipt Number<span style="color: red;">*</span> :</label>
+        <input type="text" name="receipt" [(ngModel)]="rubberSale.receiptNo" />
+        <label>Receipt Date <span style="color: red;">*</span> :</label>
+        <input type="date" #dateReceipt name="receiptDate" value="{{todayDateReceipt}}" (input)="selectedDateReceiptNo(dateReceipt.value)" />
+      </div>
+
+      <div style="columns: 2">
+        <label>Unit Price/kg <span style="color: red;">*</span> :</label>
+        <input type="number" placeholder="00.00" name="unitPrice" [(ngModel)]="rubberSale.unitPrice" (change)="calculateAmount()" />
+        <label>Total Amount <span style="color: red;">*</span> :</label>
+        <input type="text" name="amount"  [value]="rubberSale.total | number: '1.2-2'" disabled />
+      </div><br />
+    </div>
+
+    <div style="margin-top: 10px">
+      <button style="float: right" class="btn-update" (click)="update()">
+        Update &nbsp; <i class="fa fa-pencil"></i>
+      </button>
+    </div>
+
+    <div style="margin-top: 10px">
+      <button class="btn-back" (click)="back()">
+        <i class="fa fa-arrow-left"></i> &nbsp; Back
+      </button>
+    </div>
   </div>
 
-  <div style="margin-top: 10px">
-    <button class="btn-back" (click)="back()">
-      <i class="fa fa-arrow-left"></i> &nbsp; Back
-    </button>
-  </div>
-</div>
-
-<app-spinner></app-spinner>
+  <app-spinner></app-spinner>
