--- a/E-EstateV2/src/app/add-rubber-stock/add-rubber-stock.component.html
+++ b/E-EstateV2/src/app/add-rubber-stock/add-rubber-stock.component.html
@@ -6,7 +6,7 @@
   <div class="subsection2">
     <div style="columns: 2">
       <label>Month and Year <span style="color: red;">*</span> :</label>
-      <input type="month" name="month" #month [(ngModel)]="selectedMonth" (input)="monthSelected(month.value)" />
+      <input type="month" name="month" #month [(ngModel)]="monthFormatted" (input)="monthSelected(month.value)" />
       <label>Rubber Type <span style="color: red;">*</span> :</label>
       <mat-select name="rubberType" placeholder="Please Choose" [(ngModel)]="stock.rubberType"
         (selectionChange)="chooseRubberType()">
